tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_errors@unknown_arg_none_defined.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/components/unknown_arg_none_defined.txt
---
error: Argument `hello` not found in component definition.
 --> tpl:1:3
  |
1 | {{ <display_name hello={1}/> }}
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^
